# 2lang

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/twolang/: __init__.py  cli.py  convert.py  flow.py  lang.py  markdown.py  translate.py  translator.py
tests/: test_lang.py  test_markdown.py  test_translate.py  test_translator.py
