[project]
name = "2lang"
version = "0.0.0"
description = "Convert documents to Markdown and translate them"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "deep-translator>=1.11.4",
    "langdetect>=1.0.9",
    "loguru>=0.7.3",
    "markdown-it-py>=3",
    "mdformat>=0.7.22",
    "mdformat-tables>=1",
    "mdit-py-plugins>=0.4",
    "mineru[core]>=3.4.4",
    "mineru[mlx]>=3.4.4; sys_platform == 'darwin'",
    "tenacity>=9.1.4",
    "tqdm>=4.68.4",
    "typer>=0.16",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.0",
    "ty>=0.0.16",
]

[project.scripts]
2lang = "twolang.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twolang"]

[tool.ruff]
target-version = "py314"
line-length = 120 # default is 88

[tool.ruff.lint]
select = [
    "E", # pycodestyle (errors)
    "W", # pycodestyle (warnings)
    "F", # Pyflakes
    "I", # isort
    "S", # flake8-bandit
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "PERF", # Perflint
    "FURB", # Refurb
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "S101", # Use of assert detected
]

[tool.ty.environment]
extra-paths = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests that hit real external services",
]

[tool.semantic_release]
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
build_command = """
uv lock --upgrade-package "$PACKAGE_NAME"
git add uv.lock
uv build
"""
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.changelog]
exclude_commit_patterns = ["^chore", "^ci", "^build\\(deps\\)"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
mask_initial_release = true
